--- a/force-app/main/default/lwc/lifecyclehooks_Constructor/lifecyclehooks_Constructor.html
+++ b/force-app/main/default/lwc/lifecyclehooks_Constructor/lifecyclehooks_Constructor.html
@@ -1,10 +1,15 @@
 <template>
 
+
+    <lightning-card>
+
+        <div>
+            <h1>Lifycycle hooks in lwc with - Constructor</h1>
+        </div>
+
+    </lightning-card>
     
 
-    <div>
-        <h1>Lifycycle hooks in lwc with - Constructor</h1>
-        <h1>Record id is ===> {recordId}</h1>
-    </div>
+    
 
 </template>
