--- a/force-app/main/default/lwc/childComponentShowData/childComponentShowData.html
+++ b/force-app/main/default/lwc/childComponentShowData/childComponentShowData.html
@@ -1,6 +1,6 @@
 <template>
     <template if:true={accountData}>
-        <lightning-card title="Account Data" icon-name="standard:account" class="slds-var-m-around_medium">
+        <lightning-card title="Account Data - Child Component" icon-name="standard:account" class="slds-var-m-around_medium">
             <div class="slds-p-around_medium">
                 <lightning-datatable
                     key-field="Id"
