--- a/force-app/main/default/lwc/parentComponentSeachData/parentComponentSeachData.html
+++ b/force-app/main/default/lwc/parentComponentSeachData/parentComponentSeachData.html
@@ -1,15 +1,17 @@
 <template>
 
-    <lightning-card title="Search Account data - parent to child"> 
+    <lightning-card title="Search Account data - Parent Component"> 
 
          <!-- Default/basic -->
          <div class="slds-p-around_medium lgc-bg">
             <lightning-input type="text" value={fname} label="Search Acccount Data" onchange={onChangeEventHandler}></lightning-input>
         </div>
 
+        <c-child-component-show-data></c-child-component-show-data>
+
+
     </lightning-card>
 
 
-    <c-child-component-show-data></c-child-component-show-data>
     
 </template>
