--- a/force-app/main/default/lwc/navigationLwcDemo/navigationLwcDemo.html
+++ b/force-app/main/default/lwc/navigationLwcDemo/navigationLwcDemo.html
@@ -13,6 +13,13 @@
       <lightning-button label="Navigate Record Detail Page" variant="brand" onclick={NavigatRecordDetailPage} ></lightning-button><br><br>
 
 
+      <lightning-button label="Create New Account Record" variant="brand" onclick={NavigateCreateNewAccountRecord} ></lightning-button><br><br>
+
+      <lightning-button label="Url - External Site" variant="brand" onclick={urlExternalSite} ></lightning-button><br><br>
+
+
+
+
 
 
     </lightning-card>
