--- a/force-app/main/default/lwc/navigationLwcDemo/navigationLwcDemo.html
+++ b/force-app/main/default/lwc/navigationLwcDemo/navigationLwcDemo.html
@@ -17,6 +17,9 @@
 
       <lightning-button label="Url - External Site" variant="brand" onclick={urlExternalSite} ></lightning-button><br><br>
 
+      <lightning-button label="Show File" variant="brand" onclick={showfile} ></lightning-button><br><br>
+
+
 
 
 
