--- a/force-app/main/default/lwc/childComponentShowData/childComponentShowData.html
+++ b/force-app/main/default/lwc/childComponentShowData/childComponentShowData.html
@@ -6,6 +6,8 @@
                     key-field="Id"
                     data={accountData}
                     columns={columns}
+                    onsave={saveHandleAction}
+                 draft-values={fldsItemValues} 
                     hide-checkbox-column
                     class="slds-var-m-around_medium">
                 </lightning-datatable>
