--- a/force-app/main/default/lwc/parentLwc/parentLwc.html
+++ b/force-app/main/default/lwc/parentLwc/parentLwc.html
@@ -1,17 +1,12 @@
 <template>
 
-    <lightning-card  title='ParentComp' icon-name="standard:account">
 
-        <p>Count is ===> {countValue}</p>
-        
+    <lightning-card title="parentComp">
+
+        <h1>Counter is === {counter}</h1>
+
+        <c-child-lwc onsubtraction={sub} onaddition={addd} onmulvalue={mulnumber}></c-child-lwc>
+
     </lightning-card>
-
-
-   <c-child-l-w-c onforincrement={incrementwithNumber} 
-                  onfordecrement={decrementwithNumber}>
-
-   </c-child-l-w-c>
-
-   
-
+    
 </template>
