--- a/force-app/main/default/lwc/tabs_and_TabSet_Lwc/tabs_and_TabSet_Lwc.html
+++ b/force-app/main/default/lwc/tabs_and_TabSet_Lwc/tabs_and_TabSet_Lwc.html
@@ -46,9 +46,9 @@
 
 
 
-            <!-- <lightning-tab label="Account|Contact Data">
-              <c-lwc_ComboBox_with_Imperative_Method_with_Child_Records></c-lwc_ComboBox_with_Imperative_Method_with_Child_Records>
-           </lightning-tab> -->
+            <lightning-tab label="CRUD">
+              <c-crud-component></c-crud-component>
+           </lightning-tab>
 
 
         </lightning-tabset>
