--- a/force-app/main/default/lwc/tabs_and_TabSet_Lwc/tabs_and_TabSet_Lwc.html
+++ b/force-app/main/default/lwc/tabs_and_TabSet_Lwc/tabs_and_TabSet_Lwc.html
@@ -51,6 +51,11 @@
            </lightning-tab>
 
 
+           <lightning-tab label="Weather Api">
+            <c-wether-api-check></c-wether-api-check>
+         </lightning-tab>
+
+
         </lightning-tabset>
 
     </lightning-card>
