--- a/force-app/main/default/lwc/getObjectInfo/getObjectInfo.html
+++ b/force-app/main/default/lwc/getObjectInfo/getObjectInfo.html
@@ -1,3 +1,9 @@
 <template>
+
+    <lightning-card title="getObject Info">
+
+        hiiii-    {defaultRecordTypeId} 
+       
+    </lightning-card>
     
 </template>
