--- a/force-app/main/default/lwc/getObjectInfo/getObjectInfo.html
+++ b/force-app/main/default/lwc/getObjectInfo/getObjectInfo.html
@@ -2,7 +2,7 @@
 
     <lightning-card title="getObject Info">
 
-        hiiii-    {defaultRecordTypeId} 
+        hiiii-   
        
     </lightning-card>
     
