--- a/force-app/main/default/lwc/getObjectInfo/getObjectInfo.html
+++ b/force-app/main/default/lwc/getObjectInfo/getObjectInfo.html
@@ -1,9 +1,9 @@
 <template>
 
-    <lightning-card title="getObject Info">
+    <lightning-card title="getObject Info adapter">
 
-        hiiii-   
-       
+        <h1>Degaul rec id is === : {defaultRecTypeId}</h1>  <br>
+        <h1>Object Name is === :{ObjApiName}</h1>
     </lightning-card>
     
 </template>
