--- a/force-app/main/default/lwc/carTileChildComponent/carTileChildComponent.html
+++ b/force-app/main/default/lwc/carTileChildComponent/carTileChildComponent.html
@@ -2,7 +2,7 @@
 
     
         <div>
-            <div class="content">
+            <div class="content" onclick={dfdf}>
                 <img src={car.Picture_URL__c} class="slds-align_absolute-center carImage" alt="Car Picture"/>
 
                 <div>
