--- a/force-app/main/default/lwc/carTileChildComponent/carTileChildComponent.html
+++ b/force-app/main/default/lwc/carTileChildComponent/carTileChildComponent.html
@@ -1,8 +1,8 @@
 <template>
 
     
-        <div>
-            <div class="content" onclick={dfdf}>
+        <div onclick={cardOnClickHandler}>
+            <div class="content">
                 <img src={car.Picture_URL__c} class="slds-align_absolute-center carImage" alt="Car Picture"/>
 
                 <div>
