--- a/force-app/main/default/lwc/carFilter/carFilter.html
+++ b/force-app/main/default/lwc/carFilter/carFilter.html
@@ -28,9 +28,9 @@
                      </template>
                 </template>
 
-                <template if:true={categories.error} >
+                <!-- <template if:false={categories.error} >
                     <div>{categoryError}</div>
-                </template>
+                </template> -->
 
             </section>
 
@@ -50,9 +50,9 @@
                      </template>
                 </template>
 
-                <template if:true={categories.error} >
+                <!-- <template if:true={make.error} >
                     <div>{makeError}</div>
-                </template>
+                </template> -->
             </section>
 
 
