--- a/force-app/main/default/lwc/carTilelist/carTilelist.html
+++ b/force-app/main/default/lwc/carTilelist/carTilelist.html
@@ -5,13 +5,17 @@
 
         <div class="slds-p-around_medium">
 
-            <template if:true={cars}>
+            <template if:true={cars.length}>
                 <div class="content">
                     <template for:each={cars} for:item="car">
                         <c-car-tile-child-component key={car.id} car={car} oncardclicked={cardClick}></c-car-tile-child-component>
                     </template>
                 </div>
                 
+            </template>
+
+            <template if:false={cars.length}>
+                <c-car-placeholder message="hi tile list"></c-car-placeholder>
             </template>
 
 
