--- a/force-app/main/default/lwc/lMSSearchAccountRecordComponent/lMSSearchAccountRecordComponent.html
+++ b/force-app/main/default/lwc/lMSSearchAccountRecordComponent/lMSSearchAccountRecordComponent.html
@@ -12,6 +12,10 @@
         </lightning-datatable>
 
             </template>
+
+            <template if:false={data}>
+                <p>Data is not Found....</p>
+            </template>
            
         </div>
 
