--- a/force-app/main/default/lwc/accountDataResult/accountDataResult.html
+++ b/force-app/main/default/lwc/accountDataResult/accountDataResult.html
@@ -10,7 +10,7 @@
                 columns={columns}
                 hide-checkbox-column="true"
                 show-row-number-column="true"
-                
+                onrowaction={onRowActionHandler}
                 >
         </lightning-datatable>
 
