add file and updata

--- a/force-app/main/default/lwc/carTileChildComponent/carTileChildComponent.html
+++ b/force-app/main/default/lwc/carTileChildComponent/carTileChildComponent.html
@@ -1,8 +1,8 @@
 <template>
 
     
-        <div onclick={cardOnClickHandler}>
-            <div class="content">
+        <div onclick={cardOnClickHandler} >
+            <div class="content backcolor">
                 <img src={car.Picture_URL__c} class="slds-align_absolute-center carImage" alt="Car Picture"/>
 
                 <div>
