--- a/force-app/main/default/lwc/carTilelist/carTilelist.html
+++ b/force-app/main/default/lwc/carTilelist/carTilelist.html
@@ -3,7 +3,7 @@
     <lightning-card title="Card Tile List" icon-name="standard:account">
 
 
-        <div class="slds-p-around_medium">
+        <div class="slds-p-around_medium backcolor" >
 
             <template if:true={cars.length}>
                 <div class="content">
