--- a/force-app/main/default/lwc/movieSearch/movieSearch.html
+++ b/force-app/main/default/lwc/movieSearch/movieSearch.html
@@ -13,7 +13,7 @@
                     <lightning-combobox name="type" label="Type" value={selectedType} placeholder="Select Progress" options={options} onchange={handleChange} ></lightning-combobox>
                 </lightning-layout-item>
 
-                <lightning-layout-item padding="around_small" size="7">
+                <lightning-layout-item padding="around-small" size="7">
                     <lightning-input
                     name="search"
                     label="Search Here"
