--- a/force-app/main/default/lwc/createRecordDemo/createRecordDemo.html
+++ b/force-app/main/default/lwc/createRecordDemo/createRecordDemo.html
@@ -4,10 +4,10 @@
         <div class="slds-p-around_medium">
             <form>
                 <lightning-input label="FirstName" name="FirstName" onchange={changeHandler} class="slds-m-bottom_x-small"></lightning-input>
-                <lightning-input label="LastName" name="LastName" onchange={changeHandller}></lightning-input>
-                <lightning-input label="Phone" type="tel" name="Phone" onchange={changeHandller}></lightning-input>
+                <lightning-input label="LastName" name="LastName" onchange={changeHandler}></lightning-input>
+                <lightning-input label="Phone" type="tel" name="Phone" onchange={changeHandler}></lightning-input>
 
-                <lightning-input label="Email" type="email" name="Email" onchange={changeHandller}></lightning-input>
+                <lightning-input label="Email" type="email" name="Email" onchange={changeHandler}></lightning-input>
 
 
                 <lightning-button label="Create Contact Data" variant="brand" onclick={createContactHandler}></lightning-button>
