--- a/force-app/main/default/lwc/practiceLWCComponent/practiceLWCComponent.html
+++ b/force-app/main/default/lwc/practiceLWCComponent/practiceLWCComponent.html
@@ -10,5 +10,13 @@
         <p>USER ID IS : {UserId}</p>
 
     </lightning-card>
+
+    <lightning-card title="getFieldValue">
+
+        <p>Account Rating is === {rating}</p>
+        <p>Account Name is === {Name}</p>
+        <p>Account Email is === {Email}</p>
+
+    </lightning-card>
     
 </template>
